# gmxpy

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish_package.yml  python-publish.yml
gmxpy/: __init__.py  config.py
gmxpy/analysis/: __init__.py  functional.py
gmxpy/utils/: functional.py
