[tool.poetry]
name = "gmxpy"
version = "0.0.1"
description = "Wrapping GROMACS by python for me"
authors = ["Goosang Yu <gsyu93@gmail.com>"]
readme = "README.md"
packages = [{include = "gmxpy"}]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.semantic_release]
version_variable = "pyproject.toml:version"
version_source = "tag"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"