[build-system]
requires = ["hatchling >= 1.13.0"]
build-backend = "hatchling.build"

[project]
name = "gmxpy"
description = "Wrapping GROMACS by Python for me"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
authors = [
    { name = "Goosang Yu", email = "gsyu93@gmail.com" },
]
classifiers = [
    "Intended Audience :: Molecular dynamics simulation",
    "Intended Audience :: Bioinformatics",
    "Intended Audience :: Developers",
    "Operating System :: Linux",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/Goosang-Yu/gmxpy"
Repository = "https://github.com/Goosang-Yu/gmxpy"

[tool.hatch.version]
path = "gmxpy/__init__.py"
